--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,12 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center;
+    background-position: center 100px; /* Push the image down */
     color: #4B3A29;
     font-family: 'Georgia', serif;
     margin: 0;
     padding: 0;
+    
     text-align: center;
 }
 
